WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
99152
[WK2] REGRESSION(
r131057
): It made plugins/plugin-document-back-forward.html timeout
https://bugs.webkit.org/show_bug.cgi?id=99152
Summary
[WK2] REGRESSION(r131057): It made plugins/plugin-document-back-forward.html ...
Csaba Osztrogonác
Reported
2012-10-12 01:34:15 PDT
I don't know how, but I got
r131057
is the culprit with manual bisecting. --- /home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/layout-test-results/plugins/plugin-document-back-forward-expected.txt +++ /home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/layout-test-results/plugins/plugin-document-back-forward-actual.txt @@ -1,3 +1,2 @@ -ALERT: Plugin Loaded! -ALERT: Plugin Loaded! +FAIL: Timed out waiting for notifyDone to be called
Attachments
patch
(3.55 KB, patch)
2012-10-12 05:38 PDT
,
Mikhail Pozdnyakov
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mikhail Pozdnyakov
Comment 1
2012-10-12 02:29:19 PDT
Taking for investigation.
Mikhail Pozdnyakov
Comment 2
2012-10-12 05:38:33 PDT
Created
attachment 168404
[details]
patch
Csaba Osztrogonác
Comment 3
2012-10-12 05:43:28 PDT
I skipped it by
https://trac.webkit.org/changeset/131177
to paint the bot green, please unskip it when you will land the fix.
Mikhail Pozdnyakov
Comment 4
2012-10-12 05:46:47 PDT
Could please anyone take a look?
Vicki Pfau
Comment 5
2012-10-12 14:07:57 PDT
This is affecting Mac as well. If this doesn't land shortly, I will be skipping the test in Mac WK2 until a fix lands.
WebKit Review Bot
Comment 6
2012-10-12 15:02:53 PDT
Comment on
attachment 168404
[details]
patch Clearing flags on attachment: 168404 Committed
r131229
: <
http://trac.webkit.org/changeset/131229
>
WebKit Review Bot
Comment 7
2012-10-12 15:02:58 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug