[Qt][WK2] REGRESSION(r131057): It made plugins/plugin-document-back-forward.html timeout https://bugs.webkit.org/show_bug.cgi?id=99152

Patch by Mikhail Pozdnyakov <mikhail.pozdnyakov@intel.com> on 2012-10-12
Reviewed by Simon Fraser.

Even though Response was already checked in WTR WKBundlePagePolicyClient decidePolicyForResponse callback,
this check did not take plugins into consideration when deciding whether we can show the given MIME type or not
so added another check in WTR UI process which also includes plugins.

* WebKitTestRunner/TestController.cpp:
(WTR::TestController::decidePolicyForResponse):
* WebKitTestRunner/TestController.h:
(TestController):

Canonical link: https://commits.webkit.org/117197@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@131229 268f45cc-cd09-0410-ab3c-d52691b4dbfc